Add custom toggle switch type

--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/toggle_switch-error.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/toggle_switch-error.html
@@ -1,8 +1,8 @@
 <div class="form__group has-error  form__group--toggle">
-    <label class="toggle-switch-wrapper-label" for="toggletest">
+    <label class="toggle-switch-wrapper-label" for="form_field">
         <span class="control__label">Toggle</span>
         <span class="controls">
-            <input id="toggletest" type="checkbox" class="form__control toggle-switch" />
+            <input id="form_field" name="form[field]" type="checkbox" value="1" class="form__control toggle-switch" />
             <span class="toggle-switch-label"></span>
             <span class="help-block is-error"><i aria-hidden="true" class="icon-warning-sign"></i> my error</span>
         </span>
