--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/choice-guidance-container.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/choice-guidance-container.html
@@ -8,6 +8,9 @@
         data-toggle="popover"
         class="icon-question-sign input-group-guidance"></i></label>
     <div class="controls">
+        <label for="form_field_placeholder" class="control__label">
+            <input id="form_field_placeholder" name="placeholder" type="radio" value="" class="form__control radio" /><span class="form-choice__label">None</span>
+        </label>
         <label class="control__label">
             <input 
             name="choice" 
@@ -34,3 +37,4 @@
         </label>
     </div>
 </div>
+    
