--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/choice-guidance.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/choice-guidance.html
@@ -3,11 +3,14 @@
         aria-hidden="true"
         data-autoclose="true"
         data-container="body"
-        data-content="bar"
+        data-content="foo &lt;span class=&quot;bar&quot;&gt;bar&lt;/span&gt;"
         data-placement="top"
         data-toggle="popover"
         class="icon-question-sign input-group-guidance"></i></label>
     <div class="controls">
+        <label for="form_field_placeholder" class="control__label">
+            <input id="form_field_placeholder" name="placeholder" type="radio" class="form__control radio" /><span class="form-choice__label">None</span>
+        </label>
         <label class="control__label">
             <input 
             name="choice" 
