--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/choice-required-guidance.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/choice-required-guidance.html
@@ -10,25 +10,28 @@
     <div class="controls">
         <label class="control__label">
             <input 
-            name="choice" 
+            name="form[field]" 
             type="radio" 
-            value="foo" 
+            value="0"
+            required aria-required="true"
             class="form__control radio" />
             <span class="form-choice__label">Foo</span>
         </label>
         <label class="control__label">
             <input 
-            name="choice" 
+            name="form[field]" 
             type="radio" 
-            value="bar" 
+            value="1" 
+            required aria-required="true"
             class="form__control radio" />
             <span class="form-choice__label">Bar</span>
         </label>
         <label class="control__label">
             <input 
-            name="choice" 
+            name="form[field]" 
             type="radio" 
-            value="baz" 
+            value="2" 
+            required aria-required="true"
             class="form__control radio" />
             <span class="form-choice__label">Baz</span>
         </label>
