--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/choice-guidance-container.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/choice-guidance-container.html
@@ -3,36 +3,40 @@
         aria-hidden="true"
         data-autoclose="true"
         data-container="baz"
-        data-content="bar"
+        data-content="foo &lt;span class=&quot;bar&quot;&gt;bar&lt;/span&gt;"
         data-placement="top"
         data-toggle="popover"
         class="icon-question-sign input-group-guidance"></i></label>
     <div class="controls">
-        <label for="form_field_placeholder" class="control__label">
-            <input id="form_field_placeholder" name="placeholder" type="radio" value="" class="form__control radio" /><span class="form-choice__label">None</span>
-        </label>
-        <label class="control__label">
-            <input 
-            name="choice" 
+        <label for="form_field_0" class="control__label">
+        <input 
+            checked="checked"
+            id="form_field_0" 
+            name="form[field]" 
             type="radio" 
-            value="foo" 
-            class="form__control radio" />
+            value="0" 
+            class="form__control radio" 
+            />
             <span class="form-choice__label">Foo</span>
         </label>
-        <label class="control__label">
-            <input 
-            name="choice" 
+        <label for="form_field_1" class="control__label">
+        <input 
+            id="form_field_1" 
+            name="form[field]" 
             type="radio" 
-            value="bar" 
-            class="form__control radio" />
+            value="1" 
+            class="form__control radio" 
+            />
             <span class="form-choice__label">Bar</span>
         </label>
-        <label class="control__label">
-            <input 
-            name="choice" 
+        <label for="form_field_2" class="control__label">
+        <input 
+            id="form_field_2" 
+            name="form[field]" 
             type="radio" 
-            value="baz" 
-            class="form__control radio" />
+            value="2" 
+            class="form__control radio" 
+            />
             <span class="form-choice__label">Baz</span>
         </label>
     </div>
