--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/choice-required-guidance.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/choice-required-guidance.html
@@ -1,37 +1,38 @@
 <div class="form__group form-choice">
-    <label class="control__label">foo &nbsp;<span class="required-indicator" data-toggle="tooltips" title="required">*</span><i
+    <label class="control__label">foo&nbsp;<span class="required-indicator" data-toggle="tooltips" title="required">*</span><i
         aria-hidden="true"
         data-autoclose="true"
         data-container="body"
-        data-content="bar"
+        data-content="foo &lt;span class=&quot;bar&quot;&gt;bar&lt;/span&gt;"
         data-placement="top"
         data-toggle="popover"
         class="icon-question-sign input-group-guidance"></i></label>
     <div class="controls">
-        <label class="control__label">
+        <label for="form_field_0" class="control__label">
             <input 
+            checked="checked" 
+            id="form_field_0"
             name="form[field]" 
             type="radio" 
             value="0"
-            required aria-required="true"
             class="form__control radio" />
             <span class="form-choice__label">Foo</span>
         </label>
-        <label class="control__label">
+        <label for="form_field_1" class="control__label">
             <input 
+            id="form_field_1"
             name="form[field]" 
             type="radio" 
             value="1" 
-            required aria-required="true"
             class="form__control radio" />
             <span class="form-choice__label">Bar</span>
         </label>
-        <label class="control__label">
+        <label for="form_field_2" class="control__label">
             <input 
+            id="form_field_2"
             name="form[field]" 
             type="radio" 
             value="2" 
-            required aria-required="true"
             class="form__control radio" />
             <span class="form-choice__label">Baz</span>
         </label>
