--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/choice.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/choice.html
@@ -1,10 +1,7 @@
 <div class="form__group form-choice">
     <label class="control__label">foo</label>
     <div class="controls">
-        <label for="form_field_placeholder" class="control__label">
-            <input id="form_field_placeholder" name="placeholder" type="radio" class="form__control radio" /><span class="form-choice__label">None</span>
-        </label>
-        <label for="form_field_0" class="control__label"><input id="form_field_0" name="form[field]" type="radio" value="0" class="form__control radio" /><span class="form-choice__label">Foo</span></label>
+        <label for="form_field_0" class="control__label"><input checked="checked" id="form_field_0" name="form[field]" type="radio" value="0" class="form__control radio" /><span class="form-choice__label">Foo</span></label>
         <label for="form_field_1" class="control__label"><input id="form_field_1" name="form[field]" type="radio" value="1" class="form__control radio" /><span class="form-choice__label">Bar</span></label>
         <label for="form_field_2" class="control__label"><input id="form_field_2" name="form[field]" type="radio" value="2" class="form__control radio" /><span class="form-choice__label">Baz</span></label>
     </div>
