Add file tests, button tests, and make normalizeOutput fn work with <button as well as <input

--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/file.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/file.html
@@ -1,6 +1,11 @@
 <div class="form__group">
-    <label class="control__label">foo</label>
+    <label for="form_field" class="control__label">foo</label>
     <div class="controls">
-        <input type="file" class="form__control file" />
+        <input 
+            id="form_field"
+            name="form[field]" 
+            type="file" 
+            class="form__control file"
+        />
     </div>
 </div>
