--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/file-guidance.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/file-guidance.html
@@ -1,15 +1,19 @@
 <div class="form__group">
-    <label class="control__label">foo
+    <label for="form_field" class="control__label">foo
         <i
         aria-hidden="true"
         data-autoclose="true"
         data-container="body"
-        data-content="bar"
+        data-content="foo &lt;span class=&quot;bar&quot;&gt;bar&lt;/span&gt;" 
         data-placement="top"
         data-toggle="popover"
         class="icon-question-sign input-group-guidance"></i>
     </label>
     <div class="controls">
-        <input type="file" class="form__control file" />
+        <input 
+            id="form_field" 
+            name="form[field]" 
+            type="file" 
+            class="form__control file" />
     </div>
 </div>
