--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/file-help.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/file-help.html
@@ -1,8 +1,10 @@
 <div class="form__group">
-	<label class="control__label">foo</label>
+	<label for="form_field" class="control__label">foo</label>
 	<div class="controls">
 		<input
 		aria-describedby="guid-1"
+		id="form_field" 
+        name="form[field]" 
 		type="file"
 		class="form__control file" />
 		<span class="help-block" id="guid-1">my help text</span>
