Stop range inputs (both symfony & v2) from applying required attributes

--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/range-required.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/range-required.html
@@ -1,11 +1,9 @@
 <div class="form__group form-range">
-    <label for="form_field" class="control__label">foo&nbsp;<span class="required-indicator" data-toggle="tooltips" title="required">*</span></label>
+    <label for="form_field" class="control__label">foo</label>
     <div class="controls">
         <input 
         id="form_field" 
         name="form[field]" 
-        required
-        aria-required="true"
         type="range" 
         class="form__control" />
     </div>
