Fix range required guidance test

--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/range-required-guidance.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/range-required-guidance.html
@@ -1,5 +1,5 @@
 <div class="form__group form-range">
-    <label for="form_field" class="control__label">foo&nbsp;<span class="required-indicator" data-toggle="tooltips" title="required">*</span>
+    <label for="form_field" class="control__label">foo
         <i
         aria-hidden="true" 
         data-autoclose="true" 
@@ -10,6 +10,6 @@
         class="icon-question-sign input-group-guidance"></i>
     </label>
     <div class="controls">
-        <input id="form_field" name="form[field]" required aria-required="true" type="range" class="form__control" />
+        <input id="form_field" name="form[field]" type="range" class="form__control" />
     </div>
 </div>
