--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/toggle_switch-help.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/toggle_switch-help.html
@@ -2,9 +2,9 @@
     <label class="toggle-switch-wrapper-label" for="toggletest">
         <span class="control__label">Toggle</span>
         <span class="controls">
-            <input id="toggletest" type="checkbox" class="form__control toggle-switch" />
+            <input id="toggletest" type="checkbox" aria-describedby="guid-1" class="form__control toggle-switch" />
             <span class="toggle-switch-label"></span>
-            <span class="help-block">my help text</span>
+            <span class="help-block" id="guid-1">my help text</span>
         </span>
     </label>
 </div>
