--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/toggle_switch-error.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/toggle_switch-error.html
@@ -2,9 +2,9 @@
     <label class="toggle-switch-wrapper-label" for="toggletest">
         <span class="control__label">Toggle</span>
         <span class="controls">
-            <input id="toggletest" type="checkbox" class="form__control toggle-switch" />
+            <input id="toggletest" type="checkbox" aria-describedby="guid-1" aria-invalid="true" class="form__control toggle-switch" />
             <span class="toggle-switch-label"></span>
-            <span class="help-block is-error"><i aria-hidden="true" class="icon-warning-sign"></i> my error</span>
+            <span class="help-block is-error" id="guid-1"><i aria-hidden="true" class="icon-warning-sign"></i> my error</span>
         </span>
     </label>
 </div>
