--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/html/button_dropup.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/html/button_dropup.html
@@ -1,7 +1,7 @@
 <div class="btn__group dropup">
-    <button data-toggle="dropdown" class="btn dropdown__toggle">foo&nbsp;<span class="caret"></span>
+    <button aria-haspopup="true" aria-expanded="false" aria-controls="guid-1" data-toggle="dropdown" class="btn dropdown__toggle">foo&nbsp;<span class="caret"></span>
     </button>
-    <ul class="dropdown__menu pull-left">
+    <ul id="guid-1" class="dropdown__menu pull-left">
         <li>
             <a href="#foo">foo</a>
         </li>
