--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/flash/flash-info.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/flash/flash-info.html
@@ -1,6 +1,6 @@
-<div class="flash flash--info">
-    <button class="close" data-dismiss="flash">
+<section class="flash flash--info" aria-labelledby="guid-1">
+    <button class="close" data-dismiss="flash" tabindex="1">
         <i class="icon-remove"><span class="hide">Close</span></i>
     </button>
-    <i aria-hidden="true" class="icon-info-sign"></i>This is the info message style with<a href="#">an example link</a>
-</div>
+    <i aria-hidden="true" class="icon-info-sign"></i> <h2 id="guid-1">This is the info message style with<a href="#">an example link</a></h2>
+</section>
