--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/flash/flash-non-dismissable.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/flash/flash-non-dismissable.html
@@ -1,3 +1,3 @@
-<div class="flash flash--default">
-    <i aria-hidden="true" class="icon-info-sign"></i>This is a non-dismissable message with<a href="#">an example link</a>
-</div>
+<section class="flash flash--default" aria-labelledby="guid-1">
+    <i aria-hidden="true" class="icon-info-sign"></i> <h2 id="guid-1">This is a non-dismissable message with<a href="#">an example link</a></h2>
+</section>
