--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/tabs/tabs_list-url-href-with-src-active.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/tabs/tabs_list-url-href-with-src-active.html
@@ -11,14 +11,14 @@
 <div class="tab__pane" id="alpha">
     <div class="tab__container">
         <div class="tab__inner">
-            <div class="tab__content"></div>
+            <main class="tab__content" id="skip-target"></main>
         </div>
     </div>
 </div>
 <div class="tab__pane is-active" id="bravo">
     <div class="tab__container">
         <div class="tab__inner">
-            <div class="tab__content"></div>
+            <main class="tab__content" id="skip-target"></main>
         </div>
     </div>
 </div>
