Improve panel markup to address WCAG and SR concerns

--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/html/panel-actions-right.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/html/panel-actions-right.html
@@ -1,7 +1,7 @@
-<div class="panel">
-    <div class="panel__title">foo</div>
+<section class="panel" aria-labelledby="guid-1">
+    <h2 class="panel__title" id="guid-1">foo</h2>
     <div class="panel__body">
         bar
         <div class="panel__actions panel__actions--right"><button class="btn">alpha</button><button class="btn">bravo</button><button class="btn">charlie</button></div>
     </div>
-</div>
+</section>
