--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/html/panel-icon.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/html/panel-icon.html
@@ -1,5 +1,5 @@
-<div class="panel">
+<section class="panel" aria-labelledby="guid-1">
     <i aria-hidden="true" class="icon-ok panel__icon"></i>
-    <div class="panel__title">foo</div>
+    <h2 class="panel__title" id="guid-1">foo</h2>
     <div class="panel__body">bar</div>
-</div>
+</section>
