--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/flash/flash-default.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/flash/flash-default.html
@@ -1,5 +1,5 @@
 <section class="flash flash--default" aria-labelledby="guid-1">
-    <button class="close" data-dismiss="flash" tabindex="1">
+    <button class="close" data-dismiss="flash">
         <i class="icon-remove"><span class="hide">Close</span></i>
     </button>
     <i aria-hidden="true" class="icon-info-sign"></i> <h2 id="guid-1">This is the default message style with<a href="#">an example link</a></h2>
