Updated twig tests

--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/select2-label.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/select2-label.html
@@ -1,7 +1,7 @@
 <div class="form__group">
     <label class="control__label">foo</label>
     <div class="controls">
-        <select class="form__control select js-select2">
+        <select data-label="foo" class="form__control select js-select2">
             <option value="foo">bar</option>
             <option value="bar">baz</option>
         </select>
