Switch attribute positions for loading spinner test cases

--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/html/loading-label.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/html/loading-label.html
@@ -1,1 +1,1 @@
-<span class="loading" role="status"><i>Custom loading...</i></span>
+<span role="status" class="loading"><i>Custom loading...</i></span>
