helper tests for help attribute fixes

--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/compound-mixed.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/compound-mixed.html
@@ -6,7 +6,7 @@
         <input id="fooInputId" type="text" class="form__control fooInputClass" />
 
         <label for="barInputId" id="barInputId[label]" class="control__label hide">barInputLabel</label>
-        <select id="barInputId" type="select" class="form__control barInputClass select">
+        <select id="barInputId" class="form__control barInputClass select">
             <option value="sec">Seconds</option>
             <option value="min">Minutes</option>
         </select>
