--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/choice-error.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/choice-error.html
@@ -1,4 +1,4 @@
-<div class="form__group has-error form-choice">
+<fieldset class="form__group form-choice has-error">
     <div class="controls">
         <label class="control__label">
             <input name="choice" value="foo" aria-describedby="guid-1" type="radio" aria-invalid="true" class="form__control radio" />
@@ -14,4 +14,4 @@
         </label>
         <span class="help-block is-error" id="guid-1"><i aria-hidden="true" class="icon-warning-sign"></i> my error</span>
     </div>
-</div>
+</fieldset>
