--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/choice-guidance.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/choice-guidance.html
@@ -1,5 +1,5 @@
-<div class="form__group form-choice">
-    <label class="control__label">foo <i data-container="body" data-content="bar" data-placement="top" data-toggle="popover" data-autoclose="true" aria-hidden="true" class="icon-question-sign input-group-guidance"></i></label>
+<fieldset class="form__group form-choice">
+    <legend class="control__label">foo <i data-container="body" data-content="bar" data-placement="top" data-toggle="popover" data-autoclose="true" aria-hidden="true" class="icon-question-sign input-group-guidance"></i></legend>
     <div class="controls">
         <label class="control__label">
             <input name="choice" value="foo" type="radio" class="form__control radio" />
@@ -14,4 +14,4 @@
             <span class="form-choice__label">Baz</span>
         </label>
     </div>
-</div>
+</fieldset>
