--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/choice-help.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/choice-help.html
@@ -1,4 +1,4 @@
-<div class="form__group form-choice">
+<fieldset class="form__group form-choice">
     <div class="controls">
         <label class="control__label">
             <input name="choice" value="foo" aria-describedby="guid-1" type="radio" class="form__control radio" />
@@ -14,4 +14,4 @@
         </label>
         <span class="help-block" id="guid-1">my help text</span>
     </div>
-</div>
+</fieldset>
