--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/choice-label-hide.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/choice-label-hide.html
@@ -1,5 +1,5 @@
-<div class="form__group form-choice">
-    <label class="control__label hide">Choice</label>
+<fieldset class="form__group form-choice">
+    <legend class="control__label hide">Choice</legend>
     <div class="controls">
         <label class="control__label">
             <input name="choice" value="foo" type="radio" class="form__control radio" />
@@ -14,4 +14,4 @@
             <span class="form-choice__label">Baz</span>
         </label>
     </div>
-</div>
+</fieldset>
