--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/choice-multiple.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/choice-multiple.html
@@ -1,4 +1,4 @@
-<div class="form__group form-choice">
+<fieldset class="form__group form-choice">
     <div class="controls">
         <label class="control__label">
             <input name="choice" value="foo" type="checkbox" class="form__control checkbox" />
@@ -13,4 +13,4 @@
             <span class="form-choice__label">Baz</span>
         </label>
     </div>
-</div>
+</fieldset>
