--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/choice-optimize-few.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/choice-optimize-few.html
@@ -1,4 +1,4 @@
-<div class="form__group form-choice">
+<fieldset class="form__group form-choice">
     <div class="controls">
         <label class="control__label">
             <input name="choice" value="one" type="radio" class="form__control radio" />
@@ -25,4 +25,4 @@
             <span class="form-choice__label">Six</span>
         </label>
     </div>
-</div>
+</fieldset>
