--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/choice-required.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/choice-required.html
@@ -1,33 +1,33 @@
-<div class="form__group form-choice">
-    <label class="control__label">foo&nbsp;<span class="required-indicator" data-toggle="tooltips" title="required">*</span></label>
+<fieldset class="form__group form-choice">
+    <legend class="control__label">foo&nbsp;<span class="required-indicator" data-toggle="tooltips" title="required">*</span></legend>
     <div class="controls">
         <label for="form_field_0" class="control__label">
-            <input 
-                id="form_field_0" 
-                name="form[field]" 
-                value="0" 
-                checked="checked" 
+            <input
+                id="form_field_0"
+                name="form[field]"
+                value="0"
+                checked="checked"
                 required aria-required="true"
-                type="radio" 
-                class="form__control radio" 
+                type="radio"
+                class="form__control radio"
             /><span class="form-choice__label">Foo</span></label>
         <label for="form_field_1" class="control__label">
-            <input 
-                id="form_field_1" 
-                name="form[field]" 
-                value="1" 
+            <input
+                id="form_field_1"
+                name="form[field]"
+                value="1"
                 required aria-required="true"
-                type="radio" 
-                class="form__control radio" 
+                type="radio"
+                class="form__control radio"
             /><span class="form-choice__label">Bar</span></label>
         <label for="form_field_2" class="control__label">
-            <input 
-                id="form_field_2" 
-                name="form[field]" 
-                value="2" 
+            <input
+                id="form_field_2"
+                name="form[field]"
+                value="2"
                 required aria-required="true"
-                type="radio" 
-                class="form__control radio" 
+                type="radio"
+                class="form__control radio"
             /><span class="form-choice__label">Baz</span></label>
     </div>
-</div>
+</fieldset>
