Fixed failing unit test

--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/html/media-presentation.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/html/media-presentation.html
@@ -1,5 +1,5 @@
 <div class="media">
-    <img src="foo.png" role="presentation" class="media__image" />
+    <img src="foo.png" class="media__image" />
     <div class="media__body">
         <p>Bar</p>
         <span class="small-type muted">Baz</span>
