Stop form.content helper generating orphaned label elements

--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/content-disabled.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/content-disabled.html
@@ -1,5 +1,5 @@
 <div class="form__group">
-    <label class="control__label">Disabled content</label>
+    <span class="control__label">Disabled content</span>
     <div class="controls">
         <p>My value</p>
     </div>
