--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/content-raw.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/content-raw.html
@@ -1,5 +1,5 @@
 <div class="form__group">
-    <label class="control__label">foo</label>
+    <span class="control__label">foo</span>
     <div class="controls">
         bar
     </div>
