--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/content-label-hide.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/content-label-hide.html
@@ -1,5 +1,5 @@
 <div class="form__group">
-    <label class="control__label hide">foo</label>
+    <span class="control__label hide">foo</span>
     <div class="controls">
         <p>bar</p>
     </div>
