Fixed helper tests

--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/choice-required.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/choice-required.html
@@ -1,5 +1,5 @@
 <fieldset class="form__group form-choice">
-    <legend class="control__label">foo&nbsp;<span class="required-indicator" data-toggle="tooltips" title="required">*</span></legend>
+    <legend class="control__label">foo&nbsp;<span class="required-indicator" data-tippy-content="required">*</span></legend>
     <div class="controls">
         <label for="form_field_0" class="control__label">
             <input
