--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/html/edit_button-input.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/html/edit_button-input.html
@@ -1,9 +1,8 @@
 <input
     aria-label="edit"
     data-action="edit"
-    data-placement="right"
-    data-title="Edit this item"
-    data-toggle="tooltips"
+    data-tippy-content="Edit this item"
+    data-tippy-placement="right"
     type="button"
     value="&lt;i aria-hidden=&quot;true&quot; class=&quot;icon-pencil&quot;&gt;&lt;/i&gt;"
     class="btn edit-button"
