--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/html/remove_button-submit.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/html/remove_button-submit.html
@@ -1,8 +1,7 @@
 <button
     type="submit"
-    data-placement="right"
-    data-toggle="tooltips"
-    data-title="Remove this item"
+    data-tippy-content="Remove this item"
+    data-tippy-placement="right"
     data-action="remove"
     class="btn remove-button">
 <i class="icon-remove-sign"><span class="hide">Remove</span></i></button>
