--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/html/remove_button.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/html/remove_button.html
@@ -1,7 +1,6 @@
 <button
-    data-placement="right"
-    data-toggle="tooltips"
-    data-title="Remove this item"
+    data-tippy-content="Remove this item"
+    data-tippy-placement="right"
     type="button"
     data-action="remove"
     class="btn remove-button">
