--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/html/edit_button-placements.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/html/edit_button-placements.html
@@ -1,7 +1,7 @@
-<button aria-label="edit" data-action="edit" data-placement="top" data-title="Edit this item" data-toggle="tooltips" type="button" class="btn edit-button"><i aria-hidden="true" class="icon-pencil"></i></button>
+<button aria-label="edit" data-action="edit" data-tippy-content="Edit this item" data-tippy-placement="top" type="button" class="btn edit-button"><i aria-hidden="true" class="icon-pencil"></i></button>
 
-<button aria-label="edit" data-action="edit" data-placement="right" data-title="Edit this item" data-toggle="tooltips" type="button" class="btn edit-button"><i aria-hidden="true" class="icon-pencil"></i></button>
+<button aria-label="edit" data-action="edit" data-tippy-content="Edit this item" data-tippy-placement="right" type="button" class="btn edit-button"><i aria-hidden="true" class="icon-pencil"></i></button>
 
-<button aria-label="edit" data-action="edit" data-placement="bottom" data-title="Edit this item" data-toggle="tooltips" type="button" class="btn edit-button"><i aria-hidden="true" class="icon-pencil"></i></button>
+<button aria-label="edit" data-action="edit" data-tippy-content="Edit this item" data-tippy-placement="bottom" type="button" class="btn edit-button"><i aria-hidden="true" class="icon-pencil"></i></button>
 
-<button aria-label="edit" data-action="edit" data-placement="left" data-title="Edit this item" data-toggle="tooltips" type="button" class="btn edit-button"><i aria-hidden="true" class="icon-pencil"></i></button>
+<button aria-label="edit" data-action="edit" data-tippy-content="Edit this item" data-tippy-placement="left" type="button" class="btn edit-button"><i aria-hidden="true" class="icon-pencil"></i></button>
