--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/html/edit_button.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/html/edit_button.html
@@ -1,3 +1,3 @@
-<button aria-label="edit" data-action="edit" data-placement="right" data-title="Edit this item" data-toggle="tooltips" type="button" class="btn edit-button">
+<button aria-label="edit" data-action="edit" data-tippy-content="Edit this item" data-tippy-placement="right"  type="button" class="btn edit-button">
     <i aria-hidden="true" class="icon-pencil"></i>
 </button>
