--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/html/remove_button-placements.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/html/remove_button-placements.html
@@ -1,34 +1,30 @@
 <button
-    data-placement="top"
-    data-toggle="tooltips"
-    data-title="Remove this item"
+    data-tippy-content="Remove this item"
+    data-tippy-placement="top"
     type="button"
     data-action="remove"
     class="btn remove-button">
 <i class="icon-remove-sign"><span class="hide">Remove</span></i></button>
 
 <button
-    data-placement="right"
-    data-toggle="tooltips"
-    data-title="Remove this item"
+    data-tippy-content="Remove this item"
+    data-tippy-placement="right"
     type="button"
     data-action="remove"
     class="btn remove-button">
 <i class="icon-remove-sign"><span class="hide">Remove</span></i></button>
 
 <button
-    data-placement="bottom"
-    data-toggle="tooltips"
-    data-title="Remove this item"
+    data-tippy-content="Remove this item"
+    data-tippy-placement="bottom"
     type="button"
     data-action="remove"
     class="btn remove-button">
 <i class="icon-remove-sign"><span class="hide">Remove</span></i></button>
 
 <button
-    data-placement="left"
-    data-toggle="tooltips"
-    data-title="Remove this item"
+    data-tippy-content="Remove this item"
+    data-tippy-placement="left"
     type="button"
     data-action="remove"
     class="btn remove-button">
