--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/html/status-placement.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/html/status-placement.html
@@ -1,1 +1,1 @@
-<span data-placement="right" title="online" data-toggle="tooltips" class="status is-online"></span>
+<span data-tippy-placement="right" data-tippy-content="online" class="status is-online"><span class="hide">online</span>
