--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/html/status-title.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/html/status-title.html
@@ -1,1 +1,1 @@
-<span title="foo" data-placement="top" data-toggle="tooltips" class="status is-online"></span>
+<span data-tippy-placement="top" data-tippy-content="foo" class="status is-online"><span class="hide">foo</span>
