--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/html/status.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/html/status.html
@@ -1,1 +1,1 @@
-<span data-tippy-placement="top" data-tippy-content="active" class="status is-active"><span class="hide">active</span>
+<span data-tippy-placement="top" data-tippy-content="active" class="status is-active"><span class="hide">active</span></span>
