--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/html/status-with-options.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/html/status-with-options.html
@@ -1,1 +1,1 @@
-<span data-foo="bar" id="baz" data-tippy-placement="top" data-tippy-content="online" class="status is-online foo"><span class="hide">online</span>
+<span data-foo="bar" id="baz" data-tippy-placement="top" data-tippy-content="online" class="status is-online foo"><span class="hide">online</span></span>
