--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/html/label-removable-states.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/html/label-removable-states.html
@@ -1,8 +1,8 @@
-<span class="label">default<a data-action="remove" data-action-target="this" class="btn remove-button"><i class="icon-remove-sign"><span class="hide">Remove</span></i></a></span>
-<span class="label label--primary">primary<a data-action="remove" data-action-target="this" class="btn remove-button"><i class="icon-remove-sign"><span class="hide">Remove</span></i></a></span>
-<span class="label label--success">success<a data-action="remove" data-action-target="this" class="btn remove-button"><i class="icon-remove-sign"><span class="hide">Remove</span></i></a></span>
-<span class="label label--warning">warning<a data-action="remove" data-action-target="this" class="btn remove-button"><i class="icon-remove-sign"><span class="hide">Remove</span></i></a></span>
-<span class="label label--danger">danger<a data-action="remove" data-action-target="this" class="btn remove-button"><i class="icon-remove-sign"><span class="hide">Remove</span></i></a></span>
-<span class="label label--info">info<a data-action="remove" data-action-target="this" class="btn remove-button"><i class="icon-remove-sign"><span class="hide">Remove</span></i></a></span>
-<span class="label label--inverse">inverse<a data-action="remove" data-action-target="this" class="btn remove-button"><i class="icon-remove-sign"><span class="hide">Remove</span></i></a></span>
-<span class="label label--large">label large<a data-action="remove" data-action-target="this" class="btn remove-button"><i class="icon-remove-sign"><span class="hide">Remove</span></i></a></span>
+<span class="label">default<button type="button" data-action="remove" data-action-target="this" class="btn remove-button"><i class="icon-remove-sign"><span class="hide">Remove default</span></i></button></span>
+<span class="label label--primary">primary<button type="button" data-action="remove" data-action-target="this" class="btn remove-button"><i class="icon-remove-sign"><span class="hide">Remove primary</span></i></button></span>
+<span class="label label--success">success<button type="button" data-action="remove" data-action-target="this" class="btn remove-button"><i class="icon-remove-sign"><span class="hide">Remove success</span></i></button></span>
+<span class="label label--warning">warning<button type="button" data-action="remove" data-action-target="this" class="btn remove-button"><i class="icon-remove-sign"><span class="hide">Remove warning</span></i></button></span>
+<span class="label label--danger">danger<button type="button" data-action="remove" data-action-target="this" class="btn remove-button"><i class="icon-remove-sign"><span class="hide">Remove danger</span></i></button></span>
+<span class="label label--info">info<button type="button" data-action="remove" data-action-target="this" class="btn remove-button"><i class="icon-remove-sign"><span class="hide">Remove info</span></i></button></span>
+<span class="label label--inverse">inverse<button type="button" data-action="remove" data-action-target="this" class="btn remove-button"><i class="icon-remove-sign"><span class="hide">Remove inverse</span></i></button></span>
+<span class="label label--large">label large<button type="button" data-action="remove" data-action-target="this" class="btn remove-button"><i class="icon-remove-sign"><span class="hide">Remove label large</span></i></button></span>
