--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/html/label-removable.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/html/label-removable.html
@@ -1,1 +1,1 @@
-<span class="label">foo<a data-action="remove" data-action-target="this" class="btn remove-button"><i class="icon-remove-sign"><span class="hide">Remove</span></i></a></span>
+<span class="label">foo<button type="button" data-action="remove" data-action-target="this" class="btn remove-button"><i class="icon-remove-sign"><span class="hide">Remove foo</span></i></button></span>
