Remove aria-invalid from unit test fixtures

--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/select-error.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/select-error.html
@@ -1,6 +1,6 @@
 <div class="form__group has-error">
     <div class="controls">
-        <select aria-describedby="guid-1" aria-invalid="true" class="form__control select">
+        <select aria-describedby="guid-1" class="form__control select">
             <option value="foo">bar</option>
             <option value="bar">baz</option>
         </select>
