--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/choice-error.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/choice-error.html
@@ -1,15 +1,15 @@
 <fieldset class="form__group form-choice has-error">
     <div class="controls">
         <label class="control__label">
-            <input name="choice" value="foo" aria-describedby="guid-1" type="radio" aria-invalid="true" class="form__control radio" />
+            <input name="choice" value="foo" aria-describedby="guid-1" type="radio" class="form__control radio" />
             <span class="form-choice__label">Foo</span>
         </label>
         <label class="control__label">
-            <input name="choice" value="bar" aria-describedby="guid-1" type="radio" aria-invalid="true" class="form__control radio" />
+            <input name="choice" value="bar" aria-describedby="guid-1" type="radio" class="form__control radio" />
             <span class="form-choice__label">Bar</span>
         </label>
         <label class="control__label">
-            <input name="choice" value="baz" aria-describedby="guid-1" type="radio" aria-invalid="true" class="form__control radio" />
+            <input name="choice" value="baz" aria-describedby="guid-1" type="radio" class="form__control radio" />
             <span class="form-choice__label">Baz</span>
         </label>
         <span class="help-block is-error" id="guid-1"><i aria-hidden="true" class="icon-warning-sign"></i> my error</span>
