Fix remaining enforced ID tests

--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/button_group-help.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/button_group-help.html
@@ -1,11 +1,11 @@
 <fieldset class="form__group form__button-group">
     <div class="controls btn__group">
-        <input name="bands" type="radio" class="form__control radio" />
-        <label class="control__label">AM</label>
-        <input name="bands" type="radio" class="form__control radio" />
-        <label class="control__label">FM</label>
-        <input name="bands" type="radio" class="form__control radio" />
-        <label class="control__label">MW</label>
+        <input name="bands" id="id-guid-1" type="radio" class="form__control radio" />
+        <label for="id-guid-1" class="control__label">AM</label>
+        <input name="bands" id="id-guid-1" type="radio" class="form__control radio" />
+        <label for="id-guid-1" class="control__label">FM</label>
+        <input name="bands" id="id-guid-1" type="radio" class="form__control radio" />
+        <label for="id-guid-1" class="control__label">MW</label>
         <span class="help-block" id="help-guid-1">my help text</span>
     </div>
 </fieldset>
