--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/button_group.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/button_group.html
@@ -1,10 +1,10 @@
 <fieldset class="form__group form__button-group">
     <div class="controls btn__group">
         <input name="bands" id="id-guid-1" type="radio" class="form__control radio" />
-        <label class="control__label">AM</label>
+        <label for="id-guid-1" class="control__label">AM</label>
         <input name="bands" id="id-guid-1" type="radio" class="form__control radio" />
-        <label class="control__label">FM</label>
+        <label for="id-guid-1" class="control__label">FM</label>
         <input name="bands" id="id-guid-1" type="radio" class="form__control radio" />
-        <label class="control__label">MW</label>
+        <label for="id-guid-1" class="control__label">MW</label>
     </div>
 </fieldset>
