Fix remaining enforced ID tests

--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/time-error.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/time-error.html
@@ -1,6 +1,6 @@
 <div class="form__group has-error">
     <div class="controls">
-        <input id="id-guid-1" placeholder="hh:mm" data-timepicker="true" type="text" aria-describedby="help-guid-1" class="form__control" />
+        <input placeholder="hh:mm" data-timepicker="true" type="text" id="id-guid-1" aria-describedby="help-guid-1" class="form__control" />
         <span class="help-block is-error" id="help-guid-1"><i aria-hidden="true" class="icon-warning-sign"></i> my error</span>
     </div>
 </div>
