--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/checkbox-error.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/checkbox-error.html
@@ -1,6 +1,6 @@
 <div class="form__group has-error form-checkbox">
     <div class="controls">
-        <input id="id-guid-1" type="checkbox" aria-describedby="guid-1" class="form__control checkbox" />
-        <span class="help-block is-error" id="guid-1"><i aria-hidden="true" class="icon-warning-sign"></i> my error</span>
+        <input id="id-guid-1" type="checkbox" aria-describedby="help-guid-1" class="form__control checkbox" />
+        <span class="help-block is-error" id="help-guid-1"><i aria-hidden="true" class="icon-warning-sign"></i> my error</span>
     </div>
 </div>
