--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/choice-error.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/choice-error.html
@@ -1,15 +1,15 @@
 <fieldset id="id-guid-1" class="form__group form-choice has-error">
     <div class="controls">
         <label for="id-guid-1" class="control__label">
-            <input name="choice" value="foo" id="id-guid-1" aria-describedby="guid-1" type="radio" class="form__control radio" />
+            <input name="choice" value="foo" id="id-guid-1" aria-describedby="help-guid-1" type="radio" class="form__control radio" />
             <span class="form-choice__label">Foo</span>
         </label>
         <label for="id-guid-1" class="control__label">
-            <input name="choice" value="bar" id="id-guid-1" aria-describedby="guid-1" type="radio" class="form__control radio" />
+            <input name="choice" value="bar" id="id-guid-1" aria-describedby="help-guid-1" type="radio" class="form__control radio" />
             <span class="form-choice__label">Bar</span>
         </label>
         <label for="id-guid-1" class="control__label">
-            <input name="choice" value="baz" id="id-guid-1" aria-describedby="guid-1" type="radio" class="form__control radio" />
+            <input name="choice" value="baz" id="id-guid-1" aria-describedby="help-guid-1" type="radio" class="form__control radio" />
             <span class="form-choice__label">Baz</span>
         </label>
         <span class="help-block is-error" id="help-guid-1"><i aria-hidden="true" class="icon-warning-sign"></i> my error</span>
