--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/file-error.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/file-error.html
@@ -1,6 +1,6 @@
 <div class="form__group has-error">
     <div class="controls">
-        <input id="id-guid-1" type="file" aria-describedby="guid-1" class="form__control file" />
+        <input id="id-guid-1" type="file" aria-describedby="help-guid-1" class="form__control file" />
         <span class="help-block is-error" id="help-guid-1"><i aria-hidden="true" class="icon-warning-sign"></i> my error</span>
     </div>
 </div>
