Fix new failing tests

--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/date-pulsar-date-picker-format.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/date-pulsar-date-picker-format.html
@@ -1,7 +1,7 @@
 <div class="form__group">
     <div class="controls">
         <div class="input-group has-btn-appended">
-            <input data-pulsar-datepicker="true" placeholder="mm/dd/yyyy" data-pulsar-datepicker-format="US" data-pulsar-datepicker-trigger="guid-1" type="text" class="form__control" />
+            <input data-pulsar-datepicker="true" placeholder="mm/dd/yyyy" data-pulsar-datepicker-format="US" data-pulsar-datepicker-trigger="guid-1" id="id-guid-1" type="text" class="form__control" />
             <span class="input-group-btn">
                 <button type="button" id="guid-1" class="btn">
                     <i class="icon-calendar"><span class="hide">Show calendar</span></i>
