Removeable label enhancements

--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/html/label-removable-states.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/html/label-removable-states.html
@@ -1,8 +1,48 @@
-<span class="label">default<button type="button" data-action="remove" data-action-target="this" class="btn remove-button"><i class="icon-remove-sign"><span class="hide">Remove default</span></i></button></span>
-<span class="label label--primary">primary<button type="button" data-action="remove" data-action-target="this" class="btn remove-button"><i class="icon-remove-sign"><span class="hide">Remove primary</span></i></button></span>
-<span class="label label--success">success<button type="button" data-action="remove" data-action-target="this" class="btn remove-button"><i class="icon-remove-sign"><span class="hide">Remove success</span></i></button></span>
-<span class="label label--warning">warning<button type="button" data-action="remove" data-action-target="this" class="btn remove-button"><i class="icon-remove-sign"><span class="hide">Remove warning</span></i></button></span>
-<span class="label label--danger">danger<button type="button" data-action="remove" data-action-target="this" class="btn remove-button"><i class="icon-remove-sign"><span class="hide">Remove danger</span></i></button></span>
-<span class="label label--info">info<button type="button" data-action="remove" data-action-target="this" class="btn remove-button"><i class="icon-remove-sign"><span class="hide">Remove info</span></i></button></span>
-<span class="label label--inverse">inverse<button type="button" data-action="remove" data-action-target="this" class="btn remove-button"><i class="icon-remove-sign"><span class="hide">Remove inverse</span></i></button></span>
-<span class="label label--large">label large<button type="button" data-action="remove" data-action-target="this" class="btn remove-button"><i class="icon-remove-sign"><span class="hide">Remove label large</span></i></button></span>
+<span class="label label--removable">
+    <span class="label__text">default</span>
+    <button type="button" data-action="remove" data-action-target="this" class="btn remove-button">
+        <i class="icon-remove-sign"><span class="hide">Remove default</span></i>
+    </button>
+</span>
+<span class="label label--removable label--primary">
+    <span class="label__text">primary</span>
+    <button type="button" data-action="remove" data-action-target="this" class="btn remove-button">
+        <i class="icon-remove-sign"><span class="hide">Remove primary</span></i>
+    </button>
+</span>
+<span class="label label--removable label--success">
+    <span class="label__text">success</span>
+    <button type="button" data-action="remove" data-action-target="this" class="btn remove-button">
+        <i class="icon-remove-sign"><span class="hide">Remove success</span></i>
+    </button>
+</span>
+<span class="label label--removable label--warning">
+    <span class="label__text">warning</span>
+    <button type="button" data-action="remove" data-action-target="this" class="btn remove-button">
+        <i class="icon-remove-sign"><span class="hide">Remove warning</span></i>
+    </button>
+</span>
+<span class="label label--removable label--danger">
+    <span class="label__text">danger</span>
+    <button type="button" data-action="remove" data-action-target="this" class="btn remove-button">
+        <i class="icon-remove-sign"><span class="hide">Remove danger</span></i>
+    </button>
+</span>
+<span class="label label--removable label--info">
+    <span class="label__text">info</span>
+    <button type="button" data-action="remove" data-action-target="this" class="btn remove-button"><i class="icon-remove-sign">
+        <span class="hide">Remove info</span></i>
+    </button>
+</span>
+<span class="label label--removable label--inverse">
+    <span class="label__text">inverse</span>
+    <button type="button" data-action="remove" data-action-target="this" class="btn remove-button">
+        <i class="icon-remove-sign"><span class="hide">Remove inverse</span></i>
+    </button>
+</span>
+<span class="label label--removable label--large">
+    <span class="label__text">label large</span>
+    <button type="button" data-action="remove" data-action-target="this" class="btn remove-button">
+        <i class="icon-remove-sign"><span class="hide">Remove label large</span></i>
+    </button>
+</span>
