--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/html/label-removable.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/html/label-removable.html
@@ -1,1 +1,6 @@
-<span class="label">foo<button type="button" data-action="remove" data-action-target="this" class="btn remove-button"><i class="icon-remove-sign"><span class="hide">Remove foo</span></i></button></span>
+<span class="label label--removable">
+    <span class="label__text">foo</span>
+    <button type="button" data-action="remove" data-action-target="this" class="btn remove-button">
+        <i class="icon-remove-sign"><span class="hide">Remove foo</span></i>
+    </button>
+</span>
