--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/html/media-no-alt.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/html/media-no-alt.html
@@ -1,7 +1,7 @@
-<a href="#foo" class="media">
-    <img src="foo.png" alt="foo alt" class="media__image" />
+<div class="media">
+    <img src="foo.png" alt="" class="media__image" />
     <div class="media__body">
         <p>Bar</p>
         <span class="small-type">Baz</span>
     </div>
-</a>
+</div>
