--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/html/media-presentation.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/html/media-presentation.html
@@ -2,6 +2,6 @@
     <img src="foo.png" class="media__image" />
     <div class="media__body">
         <p>Bar</p>
-        <span class="small-type muted">Baz</span>
+        <span class="small-type">Baz</span>
     </div>
 </div>
