--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/html/media-actions.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/html/media-actions.html
@@ -5,6 +5,6 @@
             <button data-tippy-content="Remove this item" data-tippy-placement="right" type="button" data-action="remove" data-action-target="#example" class="btn remove-button"><i class="icon-remove-sign"><span class="hide">Remove</span></i></button>
         </span>
         <p>Bar</p>
-        <span class="small-type muted">Baz</span>
+        <span class="small-type">Baz</span>
     </div>
 </div>
