--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/html/media-icon-color.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/html/media-icon-color.html
@@ -2,6 +2,6 @@
     <i style="color: #f00" aria-hidden="true" class="icon-ok media__image"></i>
     <div class="media__body">
         <p>Bar</p>
-        <span class="small-type muted">Baz</span>
+        <span class="small-type">Baz</span>
     </div>
 </div>
