Unit test fixes

--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/file-required.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/file-required.html
@@ -1,6 +1,6 @@
 <div class="form__group">
-  <label class="control__label">foo&nbsp;<span aria-hidden="true" class="required-indicator" data-tippy-content="required">*</span></label>
+  <label for="id-guid-1" class="control__label">foo&nbsp;<span aria-hidden="true" class="required-indicator" data-tippy-content="required">*</span></label>
   <div class="controls">
-    <input required type="file" class="form__control file" />
+    <input required id="id-guid-1" type="file" class="form__control file" />
   </div>
 </div>
