--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/select-required.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/select-required.html
@@ -1,6 +1,6 @@
 <div class="form__group">
     <div class="controls">
-        <select required class="form__control select">
+        <select required id="id-guid-1" class="form__control select">
             <option value="foo">bar</option>
             <option value="bar">baz</option>
         </select>
