--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/select2-placeholder-single.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/select2-placeholder-single.html
@@ -1,6 +1,6 @@
 <div class="form__group">
     <div class="controls">
-        <select data-placeholder="foo" class="form__control select js-select2">
+        <select id="id-guid-1" data-placeholder="foo" class="form__control select js-select2">
             <option value="">foo</option>
             <option value="foo">bar</option>
             <option value="bar">baz</option>
