Fix twig macro output tests
* Adds rows and cols attributes to textareas
* Adds lowercase values to boolean attributes

--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/select-append-prepend.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/select-append-prepend.html
@@ -1,7 +1,7 @@
 <div class="form__group">
     <div class="controls">
         <div class="input-group">
-            <select prepended="prepended" class="form__control select">
+            <select class="form__control select">
                 <option value="foo">bar</option>
                 <option value="bar">baz</option>
             </select>
