--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/select2-nested-selected-multiple.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/select2-nested-selected-multiple.html
@@ -1,8 +1,8 @@
 <div class="form__group">
     <div class="controls">
         <select class="form__control select js-select2">
-            <option value="foo" selected>bar</option>
-            <option value="bar" selected>baz</option>
+            <option value="foo" selected="selected">bar</option>
+            <option value="bar" selected="selected">baz</option>
         </select>
     </div>
 </div>
