--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/textarea.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/textarea.html
@@ -1,6 +1,6 @@
 <div class="form__group">
     <label class="control__label">foo</label>
     <div class="controls">
-        <textarea class="form__control textarea"></textarea>
+        <textarea cols="20" rows="2" class="form__control textarea"></textarea>
     </div>
 </div>
