--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/choice-required.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/choice-required.html
@@ -7,7 +7,7 @@
                 name="form[field]"
                 value="0"
                 checked="checked"
-                required
+                required="required"
                 type="radio"
                 class="form__control radio"
             /><span class="form-choice__label">Foo</span></label>
@@ -16,7 +16,7 @@
                 id="form_field_1"
                 name="form[field]"
                 value="1"
-                required
+                required="required"
                 type="radio"
                 class="form__control radio"
             /><span class="form-choice__label">Bar</span></label>
@@ -25,7 +25,7 @@
                 id="form_field_2"
                 name="form[field]"
                 value="2"
-                required
+                required="required"
                 type="radio"
                 class="form__control radio"
             /><span class="form-choice__label">Baz</span></label>
