--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/select-optgroup-selected.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/select-optgroup-selected.html
@@ -7,7 +7,7 @@
                 <option value="1-bar-value">1-bar</option>
             </optgroup>
             <optgroup label="optgroup-2">
-                <option value="2-foo-value" selected>2-foo</option>
+                <option value="2-foo-value" selected="selected">2-foo</option>
                 <option value="2-bar-value">2-bar</option>
             </optgroup>
         </select>
