--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/select2-multiple.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/select2-multiple.html
@@ -1,6 +1,6 @@
 <div class="form__group">
     <div class="controls">
-        <select multiple class="form__control select js-select2">
+        <select multiple="multiple" class="form__control select js-select2">
             <option value="foo">bar</option>
             <option value="bar">baz</option>
         </select>
