--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/select2-selected.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/select2-selected.html
@@ -2,7 +2,7 @@
     <div class="controls">
         <select class="form__control select js-select2">
             <option value="foo">bar</option>
-            <option value="bar" selected>baz</option>
+            <option value="bar" selected="selected">baz</option>
         </select>
     </div>
 </div>
