Apple raw opt-in to form, elem and flash components

--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/content-raw.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/content-raw.html
@@ -1,6 +1,7 @@
 <div class="form__group">
-    <span class="control__label">foo</span>
-    <div class="controls">
-        bar
-    </div>
+  <div class="controls"><p>foo &lt;script&gt;BAR&lt;/script&gt;</p></div>
+</div>
+
+<div class="form__group">
+  <div class="controls"><p>foo<script>BAR</script></p></div>
 </div>
