Fix bulk actions label and some broken unit tests

--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/tabs/tabs_list-template-active.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/tabs/tabs_list-template-active.html
@@ -11,14 +11,18 @@
 <div class="tab__pane" id="alpha">
     <div class="tab__container">
         <div class="tab__inner">
-            <div class="tab__content" id="skip-target" role="main"></div>
+            <div class="tab__content" id="skip-target" role="main">
+                <h1 class="main-title">MISSING HEADING</h1>
+            </div>
         </div>
     </div>
 </div>
 <div class="tab__pane is-active" id="bravo">
     <div class="tab__container">
         <div class="tab__inner">
-            <div class="tab__content" id="skip-target" role="main"></div>
+            <div class="tab__content" id="skip-target" role="main">
+                <h1 class="main-title">MISSING HEADING</h1>
+            </div>
         </div>
     </div>
 </div>
