--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/tabs/tabs_list-url-href-with-src.html
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/tabs/tabs_list-url-href-with-src.html
@@ -8,7 +8,9 @@
 <div class="tab__pane is-active" id="foo">
     <div class="tab__container">
         <div class="tab__inner">
-            <div class="tab__content" id="skip-target" role="main"></div>
+            <div class="tab__content" id="skip-target" role="main">
+                <h1 class="main-title">MISSING HEADING</h1>
+            </div>
         </div>
     </div>
 </div>
